--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -31,13 +31,14 @@
 }
 
 .logo-img {
-    height: 40px;
+    height: 70px;
     width: auto;
+    border-radius: 50%;
 }
 
 .nav-links {
     display: flex;
-    gap: 30px;
+    gap: 40px;
     align-items: center;
 }
 
@@ -47,7 +48,8 @@
 }
 
 .nav-links a:hover {
-    color: var(--primary);
+    /* color: var(--primary); */
+    color: white;
 }
 
 .mobile-toggle {
