--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -45,11 +45,13 @@
 .nav-links a {
     font-weight: 500;
     font-size: 0.95rem;
+    padding: 7px;
 }
 
 .nav-links a:hover {
-    /* color: var(--primary); */
+    background-color: var(--primary);
     color: white;
+    border-radius: 30px;
 }
 
 .mobile-toggle {
